--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				document.getElementById('map'),
 				{
 					location: {
-						center: [37.588144, 55.733842],
+						center: [55.028894, 82.926493],
 						zoom: 10
 					}
 				}
@@ -257,7 +257,7 @@
 			<!-- Map -->
 			<div class="map">
 				<div class="container">
-					<div id="map" style="width: 600px; height: 400px"></div>
+					<div id="map"></div>
 				</div>
 			</div>
 		</main>
